syntax = "proto3";

package twitter.user;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Twitter.Web.User.Grpc.Protos.User";


service User {
  rpc CreateAccount (CreateAccountRequest) returns (MessageResponse);
  rpc ConfirmAccount (ConfirmAccountRequest) returns (MessageResponse);
  rpc UpdateProfile (UpdateProfileRequest) returns (MessageResponse);
  rpc UserLogin (UserLoginRequest) returns (UserLoginResponse);
  rpc AddFollower (AddFollowerRequest) returns (MessageResponse);
  rpc UnFollower (UnFollowerRequest) returns (MessageResponse);
}

message CreateAccountRequest {
  string full_name = 1;
  string email = 2;
  string phone_number = 3;
  string password = 4;
  string dob = 5;
}

message MessageResponse {
  string message = 1;
}

message ConfirmAccountRequest {
  string email = 1;
  string token = 2;
}

message UpdateProfileRequest {
  string full_name = 1;
  string user_id = 2;
  string phone_number = 3;
  string dob = 4;
}

message UserLoginRequest {
  string email = 1;
  string password = 2;
}


message UserLoginResponse {
  string full_name = 1;
  string email = 2;
  string phone_number = 3;
  string dob = 4;
  string user_id = 5;
  string user_role = 6;
  string state = 7;
  google.protobuf.Timestamp last_login = 8;
  string token = 9;

}

message AddFollowerRequest {
  string follower_id = 1;
  string followee_id = 2;
}

message UnFollowerRequest {
  string follower_id = 1;
  string followee_id = 2;
}

